<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">飞拍无人机</string>
    <string name="login_photo_def" translatable="false">输入手机号</string>
    <string name="click_login_botton_means_you_agree" translatable="false">点击登录按钮，即代表你同意</string>
    <string name="agreed" translatable="false">已同意</string>
    <string name="and" translatable="false">和</string>
    <string name="user_agreement" translatable="false">用户协议</string>
    <string name="privacy_policy" translatable="false">隐私条款</string>
    <string name="understood_and_agreed" translatable="false">我已了解并同意</string>
    <string name="user_agreement_content" translatable="false">
        《用户协议》（以下简称“本协议”）是您（或称“用户”，指注册、登录、使用、浏览本服务的个人或组织）
        与深圳市飞拍科技有限公司（以下简称“飞拍”或“飞拍科技”）关于飞拍无人机APP移动应用服务（以下简称
        “飞拍APP”)以及与飞拍APP关联的产品、程序及服务（包括但不限于飞拍APP）（以下合称“飞拍服务”）所
        订立的协议。 飞拍科技在此特别提醒用户认真阅读、充分理解---本协议中各条款，包括免除或者限制飞拍科
        技责任的免责条款及对用户的权利限制条款。请您审慎阅读并选择接受或不接受本协议(未成年人应在法定监护
        人陪同下阅读），如果您对本协议的任何条款表示异议，您可以选择不使用飞拍服务。您的注册、登录、使用、
        发布等行为将视为对本协议的接受，并同意接受本协议项下全部条款的约束。
        您对本协议的接受即自愿接受全部条款的约束，包括接飞拍科技对任一条款随时所做的任何修改。本协议可由
        飞拍科技随时更新，更新后的条款一旦公布即代替原本的条款，恕不再另行通知，用户可在飞拍APP查阅最新版
        条款。在飞拍科技修改本协议相关条款之后，如果用户不接受修改后的条款，请立即停止使用飞拍服务，用户
        继续使用飞拍服务将被视为已接受了修改后的协议。\n
        一、 飞拍无人机APP及飞拍服务\n
        1、 飞拍无人机APP功能及飞拍服务概述： 您可以使用飞拍无人机APP在飞行中控制飞拍无人机摄影摄像、计划
        飞行路线以模拟飞行，也可以使用飞拍无人机APP将由飞拍无人机中的照相机所拍摄的照片或录像的影片，上传
        至任意平台，包括“720云”（https://720yun.com/）、“微信”、“微博”等第三方平台。\n
        2、 您必须知悉并确认：\n
        1) 我们因业务发展需要，可能单方面对飞拍服务的全部或部分内容在任何时候不经任何通知的情况下变更、暂
        停、限制、终止或撤销，用户需承担此风险； \n
        2) 飞拍服务中可能包括广告等活动，用户同意在使用过程中显示我们及关联方与第三方供应商、合作伙伴提供的广告以
        及其他活动； \n
        3) 我们有权自行全权决定以任何理由，依法停止传输任何违反有关法律法规或本协议约定，或侵犯、妨害、威胁
        任何人权利或安全的内容，并有权依其自行判断对违反本协议的任何人士采取适当的法律行动，包括但不限于，
        从飞拍服务中删除具有违法性、侵权性、不当性等内容，终止违反者的登录资格，阻止其使用我们全部或部分飞拍
        服务，并且依据法律法规保存有关信息并应有关部门的要求提供报告等。  \n
        二、 用户注册与账户 \n
        1、 注册：  您必须注册用户帐户方可浏览飞拍无人机APP。根据《移动互联网应用程序信息服务管理规定》的
        相关规定，那您必须绑定基于实名登记的移动电话号码才可成功注册用户帐户。同时，您可能将会需要于注册页
        面上提供相关的个人信息，包括但不限于您的姓名、电子邮件、联系电话等。您可以按照飞拍无人机APP说明随时
        终止使用您的帐户，飞拍无人机APP将会依据本协议规定保留或终止您的帐户。  \n
        2、 您必须承诺和保证： \n
        1)您了解并同意，飞拍无人机APP是一个应用服务产品，用户须对注册信息的真实性、合法性、有效性承担全部责任
        ；用户不得冒充他人，不得利用他人的名义使用飞拍服务、发布任何信息和/或使用飞拍无人机APP在飞行中控制飞
        拍无人机；不得恶意使用注册帐户导致其他用户误认；否则我们有权立即停止提供包括飞拍服务在内的任何服务，您
        独自承担由此而产生的一切法律责任；  \n
        2) 您使用飞拍无人机APP与飞拍服务的行为必须合法，您必须为自己注册帐户下的一切行为负责，包括您通过飞拍无
        人机APP所发表的任何内容、控制飞拍无人机进行的任何操控以及由此产生的任何结果。用户应对其中的内容和功能使
        用自行加以判断，并承担因使用而引起的所有风险，包括因对内容和功能的正确性、完整性或实用性的依赖而产生的风
        险。飞拍科技无法且不会对因用户行为而导致的任何损失或损害承担责任；  \n
        3)您对您的登录信息保密、不被其他人获取并使用，并且对您在飞拍无人机APP账户下的所有行为负责。您必须将任何有可
        能触犯法律的，未授权使用或怀疑为未授权使用的行为在第一时间通知我们，我们不对您因未能遵守上述要求而造成的损
        失承担责任。  \n
        4) 您通过飞拍无人机APP发表的信息为公开的信息，其他第三方均可以通过本平台获取用户发表的信息
        ，用户对任何信息的发表即认可该信息为公开的信息，并单独对此行为承担法律责任；任何用户不愿被其他第三人获知
        的信息都不应在该平台上进行发表。  \n
        三、用户内容\n
        1、 用户内容：  用户内容是指该用户下载、发布或以其他方式使用飞拍无人机APP与飞拍服务时产生的所有内容，您是
        您的用户内容唯一的责任人，您将承担因您的用户内容披露而导致的您或任何第三方被识别的风险。 \n
        2、 许可：  您通过上传、发布、发行或其他方式使用您在飞拍无人机APP与飞拍服务的用户内容时，即视为自动授权且
        承诺和保证您有权授予我们不可撤销的、非独家的、免版税的且足额缴纳的全球许可。  \n
        3、第三方内容：  飞拍无人机APP可向第三方平台发布用户主动分享的内容。您作为飞拍无人机APP用户所进行的拍摄、发布等
        行为，飞拍科技不控制且不对该等用户所发布的内容承担法律责任，也没有检查、监控、审批、核准该等用户内容的义务。您
        对自主发布的内容以及产生的风险承担全部法律责任，飞拍科技对此类行为及相关情况不承担任何法律责任。\n
        四、 用户权利及义务 \n
        1、 合法使用飞拍无人机APP及飞拍服务的权利； \n
        2、 在您合法所有的设备上下载、安装、使用飞拍服务的权利； \n
        3、 用户帐号的所有权归飞拍科技所有，基于帐号安全性的考虑，禁止使用他人的手机号、邮箱地址、注册飞拍帐号。您完成申请注
        册手续后，获得飞拍帐号的使用权，该使用权仅属于初始申请注册人，禁止赠与、借用、租用、转让或售卖。飞拍科技因经营需
        要，有权回收用户的帐号； \n
        4、 您有权更改、删除在飞拍无人机APP上的个人资料、注册信息及发布内容等，但需注意，删除有关信息的同时可能也会删除任何您
        储存在系统中的文字和图片。用户需承担该风险； \n
        5、 您有责任妥善保管注册帐户信息及帐户密码的安全，您需要对注册帐户以及密码下的行为承担法律责任。用户同意在任何情况下不
        使用其他成员的帐户或密码。在您怀疑他人在使用您的帐户或密码时，您同意立即通知飞拍科技；\n
        6、 权利限制： \n
        1) 您不得对飞拍无人机APP内容或飞拍服务进行任何形式的许可、出售、租赁、转让、发行或做其他商业用途； \n
        2) 您不得以创建相同或竞争服务为目的访问飞拍无人机APP或使用飞拍服务； \n
        3) 除非法律明文规定，否则您不得对飞拍无人机APP或飞拍服务（包括但不限于内容或产品中的广告或赞助内容） 的任何部分以任何形
        式或方法进行复制、发行、再版、下载、显示、张贴、修改、翻译、合并、利用、分解或反向编译等； \n
        4) 您需对您使用第三方网站和广告产生的风险承担法律责任。当您访问第三方网站和广告时，适用第三方的条款和 政策；\n
        5) 您已同意通过上传、发布或以其他方式使用飞拍无人机APP或飞拍服务，在使用过程中，您将承担因下述行为所造成的风险
        而产生的全部法律责任：\n
        ① 破坏宪法所确定的基本原则的；\n
        ② 危害国家安全、泄露国家秘密、颠覆国家政权、破坏国家统一的;损害国家荣誉和利益的；煽动民族仇恨、民族歧视，破坏民族
        团结的；破坏国家宗教政策，宣扬邪教和封建迷信的；  \n
        ③散布谣言，扰乱社会秩序，破坏社会稳定的；散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；侮辱或者诽谤
        他人，侵害他人合法权益的；含有法律法规、行政规章所禁止的其他内容的；  \n
        ④违反国家关于无人机空域管理的相关规定； ⑤其他违反国家法律规定或对社会产生不良影响的行为。 \n
        6) 您已同意不在飞拍无人机APP或利用飞拍服务从事下列行为：\n
        ①上传或发布电脑病毒、蠕虫、恶意代码、故意破坏或改变计算机系统或数据的软件；未授权的情况下，收集其他用户的信息或
        数据，例如移动电话号码等；  \n
        ②禁用飞拍无人机APP的网络连接，给本飞拍无人机APP造成过度的负担或以其他方式干扰或损害网站服务器和网络链接；
        ③干扰、破坏其它用户正常使用飞拍无人机APP或飞拍服务。 \n
        五、 损害赔偿 \n
        1、 您必须根据法律、法规以及本协议的规定使用飞拍无人机APP和飞拍服务，避免飞拍因下述行为或相关行为遭受来自第三
        方的任何投诉和/或诉讼，并承担由此带来的任何损失、损害、责任、成本和费用（包括但不限于律师费）：  \n
        1) 您使用飞拍无人机APP和飞拍服务的行为；\n
        2) 您通过飞拍无人机APP 控制飞拍无人机的行为；\n
        3) 您的用户内容；\n
        4) 您违反本协议的行为。 \n
        2、 您已同意，除非获得飞拍科技书面同意，您不得在您与飞拍科技共同对第三方提起的诉讼中单方和解。 \n
        3、 在任何情况下，飞拍都不对您或任何第三方因本协议产生的任何间接性、后果性、惩戒性的、偶然的、特殊或惩罚性的损害
        赔偿承担责任。为免疑义，访问、使用飞拍无人机APP和飞拍服务所产生的损坏计算机系统或移动通讯设备数据库的风险将由您个人
        承担。 \n
        六、免责声明 \n
        1、 如发生下述情形，飞拍科技不承担任何法律责任： \n
        1) 依据法律规定、或相关政府部门的要求、或国家空域安全监管的要求，监控、收集并提供您个人信息（包括但不限于用户在使用飞
        拍服务过程中产生的飞行数据，例如飞行高度、飞行速度、方位等）； \n
        2) 由于您的使用不当或其他自身原因而导致任何个人信息的泄露； \n
        3) 任何由于黑客攻击，电脑病毒的侵入，非法内容信息、骚扰信息的屏蔽，政府管制以及其他任何网络、技术、通信线路、信息安全
        管理措施等原因造成的服务中断、受阻等不能满足用户要求的情形；  \n
        4) 用户违反法律法规的规定在包括中国大陆在内的禁飞区域使用飞拍服务而遭受各类处罚和损失；\n
        5) 用户因第三方如运营商的通讯线路故障、技术问题、网络、电脑故障、系统不稳定及其他因不可抗力造成的损失的情形；\n
        6) 使用飞拍服务可能存在的来自他人匿名或冒名的含有威胁、诽谤、令人反感或非法内容的信息而招致的风险；\n
        7) 用户之间通过飞拍无人机APP和飞拍服务与其他用户交往，因受误导或欺骗而导致或可能导致的任何心理、生理上的伤害以及经济上的损失。\n
        2、 用户在飞拍无人机APP所发布的任何内容，或通过飞拍无人机APP对飞拍无人机进行的任何操控，并不代表和反映飞拍科技的任何观点
        或政策，飞拍科技对此不承担任何责任。 \n
        3、 在任何情况下，飞拍科技均不对任何间接性、后果性、惩罚性、偶然性、特殊性或刑罚性的损害，包括因用户使用飞拍服务而遭受的利润损失，承担责任。尽管本协议中可能含有相悖的规定，我们对您承担的全部责任
        ，无论因何原因或何种行为方式，始终不超过您在注册期内因使用飞拍服务而支付给飞拍科技的费用(如有)。\n
        七、 知识产权\n
        1、用户在使用飞拍无人机APP以及飞拍服务过程中所发布的信息不得侵犯任何第三人的知识产权，未经具有相关所有权所有者之事先书面
        同意，用户不得以任何方式上传、发布、修改、传播或复制任何受著作权保护的材料、商标或属于其他人的专有信息。如果收到任何
        著作权人或其合法代表发给飞拍科技的适当通知后，我们将可能协助、提供、审查或移除该等侵犯他人著作权的内容或证据。 \n
        2、用户在使用飞拍无人机APP以及飞拍服务过程中所发布的原创内容，著作权归用户本人所有，用户可授权第三方任何方式使用。多人参
        与编辑的内容，包括但不限于问题及补充说明、答案总结、话题描述、话题结构，所有参与者均同意，相关知识产权归飞拍所有。\n
        3、 用户在使用飞拍无人机APP以及飞拍服务过程中所发布的全部内容，授予飞拍科技免费的、不可撤销的、非独家使用许可，飞拍科
        技有权将该内容以各种形式用于飞拍科技各种形态的产品和服务上，包括但不限于网站、应用、媒体或其他。  \n
        4、 飞拍无人机APP以及飞拍服务中所涉及的飞拍标志及产品、服务名称、图片、图形等，均受著作权、商标及其他法律保护。未经飞拍科技事先书面同
        意，用户不得将上述内容以任何方式展示或使用或作其他处理，任何单位及个人不得以任何方式或理由对该商标的任何部分进行使用
        、复制、修改、传播、抄录或与其它产品捆绑使用销售。 \n
        5、 除前述规定以外，如果您认为有人复制并在飞拍无人机APP以及飞拍服务上发布您的作品，并已构成对您著作权的侵犯，请及时与我
        们联系，并提供包含如下信息的书面通知：  \n
        1) 证明您作为涉嫌侵权内容所有者的权属证明； \n
        2) 明确的身份证明、住址、联系方式； \n
        3) 涉嫌侵权内容在飞拍服务上的位置；\n
        4) 您声称遭受侵犯的著作权作品的描述； \n
        5) 您著作权遭受侵犯的相关证明；\n
        6) 在同意承担伪证处罚之后果的前提下，出具书面陈述以声明您在通知中所述内容是准确和真实的。 \n
        八、 修改与终止 \n
        1、 修改： \n
        1) 本协议容许变更。如果本协议有变更，我们将在飞拍无人机APP上公布更新后的协议。之后，继续使用飞拍无人机APP和飞
        拍服务则视为您已知晓此类变更并同意受条款其约束；  \n
        2) 飞拍科技保留在任何时候无需通知而修改、保留或关闭飞拍无人机APP和飞拍服务之权利； 3) 您已同意飞拍科技无需因修改
        、保留或关闭飞拍无人机APP和飞拍服务的行为对您或第三方承担责任。 \n
        2、 终止：\n
        1) 本协议自您接受之日起生效，在您使用飞拍无人机APP和飞拍服务的过程中持续有效，直至依据本协议终止；\n
        2) 尽管有上述规定，如果您使用飞拍无人机APP和飞拍服务的时间早于您接受本协议的时间，若您在此知晓或应当知晓并同
        意本协议，那么本协议于您第一次使用飞拍无人机APP和飞拍服务时生效，除非依据本协议提前终止。\n
        3、如果用户侵犯第三人的版权且飞拍科技接到版权所有人或版权所有人的合法代理人的通知后，飞拍科技保留终止本协议的权利。\n
        4、一旦本协议终止，您的飞拍账户和使用飞拍无人机APP和飞拍服务的权利即告终止。您应当知晓您的飞拍账户终止意味着您的用户内容
        将从我们的活动数据库中删除。飞拍科技不因终止本协议对您承担任何责任，包括终止您的用户账户和删除您的用户内容。\n
        5、 任何飞拍无人机APP的更新版本或飞拍服务的未来版本、更新或者其他变更将受到本协议约束。 \n
        九、其他\n
        1、 反馈您对飞拍提出建议（或称“反馈”），即视为您向飞拍转让“反馈”的全部权利并同意飞拍有权利以任何合理方式使用
        此反馈及其相关信息。我们将视此类反馈信息视为非保密且非专有。 \n
        2、 隐私政策 \n
        1) 请查阅我们的 《隐私条款》， 《隐私条款》为与本协议效力等同且不可分割的一部分。在任何时候，您的信息均依照
        《隐私条款》处理。  \n
        2) 飞拍科技将充分保护用户的个人隐私信息，飞拍科技保证不对外公开或向第三方透露用户个人隐私信息，或用户在使用服
        务时存储的非公开内容，除非根据法律或有法律赋予权限的政府部门要求或事先得到用户明确授权等原因，飞拍科技需要披露
        用户的个人隐私信息，包括但不限于用户在使用飞拍服务过程中产生的飞行数据。 \n
        3、 通知  您必须提供您最近经常使用的有效的电子邮件地址。您所提供的电子邮件地址无法使用或者因任何原因我们无法将通知送达给您而
        产生的风险，飞拍不承担责任。飞拍无人机APP发布的公告通知及向您所发送的包含此类通知的电子邮件（如有）毫无疑问构成有效通
        知。  \n
        4、 适用法律  本协议适用中华人民共和国法律。如果双方发生纠纷，应本着友好的原则协商解决；如协商不成，应向飞拍所
        在地的法院提起诉讼。\n
        5、 独立性  若本协议中的某些条款因故无法适用，则本协议的其他条款继续适用且无法适用的条款将会被修
        改，以便其能够依法适用。 \n
        6、 完整性  本协议（包括隐私政策）是您和飞拍之间关于飞拍无人机APP以及飞拍服务相关事项的最终
        的、完整的、排他的协议，且取代和合并之前当事人关于此类事项（包括之前的最终用户许可、服务条款）的讨论和协议。 \n
        7、 标题每部分的题目只为阅读之便而无任何法律或合同义务。\n
        8、 转让  除非飞拍科技书面同意，您不得转让本协议所规定的权利义务。任
        何违反上述规定企图转让的行为均无效。\n
    </string>
    <string name="go_to_settings" translatable="false">去设置</string>
    <string name="permission_not_open" translatable="false">有权限未启动，应用无法正常使用，\n请去设置界面启动吧!</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="confirm" translatable="false">确定</string>
    <string name="take_photo" translatable="false">拍照</string>
    <string name="photo_album" translatable="false">相册</string>
    <string name="start" translatable="false">开始</string>
    <string name="single_click_map_set_point" translatable="false">单击地图上的点即可设置为航点</string>
    <string name="rising" translatable="false">上升</string>
    <string name="falling" translatable="false">下降</string>
    <string name="move_plane_to_take_panor" translatable="false">将飞行器移动至拍摄全景的位置</string>
    <string name="total_shooting_time" translatable="false">拍摄总时长</string>
    <string name="minutes" translatable="false">分钟</string>
    <string name="make_sure_sufficient_power" translatable="false">*请确保飞行器电量充足。</string>
    <string name="shooting" translatable="false">正在拍摄</string>
    <string name="amount_of_sheets" translatable="false">张</string>
    <string name="m" translatable="false">米</string>
    <string name="front" translatable="false">前</string>
    <string name="back" translatable="false">后</string>
    <string name="left" translatable="false">左</string>
    <string name="right" translatable="false">右</string>
    <string name="navigation_point_set" translatable="false">已设置航点</string>
    <string name="total_distance" translatable="false">总里程</string>
    <string name="pcs" translatable="false">个</string>
    <string name="start_fly" translatable="false">开始飞行</string>
    <string name="adjust_stop_fly" translatable="false">操作遥控器将自动停止飞行</string>
    <string name="turn_left" translatable="false">左转</string>
    <string name="turn_right" translatable="false">右转</string>
    <string name="front_fly" translatable="false">前飞</string>
    <string name="behind_fly" translatable="false">后飞</string>
    <string name="left_fly" translatable="false">左飞</string>
    <string name="right_fly" translatable="false">右飞</string>
</resources>