<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mian_container"
    android:layout_width="672px"
    android:layout_height="408px">

    <TextView
        android:id="@+id/base_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39px"
        android:text="@string/go_to_settings"
        android:textColor="@color/color_000000"
        android:textSize="39px"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/base_dialog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/base_dialog_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33px"
        android:gravity="center"
        android:text="@string/permission_not_open"
        android:textColor="@color/color_333333"
        android:textSize="30px" />


    <View
        android:layout_width="match_parent"
        android:layout_height="3px"
        android:layout_above="@+id/button_ly"
        android:background="@color/color_b8b8b8" />

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/button_ly"
        android:layout_width="match_parent"
        android:layout_height="138px"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/confirm_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/color_38bcff"
            android:textSize="39px"
            android:textStyle="bold" />

        <View
            android:id="@+id/bottom_ly_canter_view"
            android:layout_width="3px"
            android:layout_height="match_parent"
            android:layout_above="@+id/button_ly"
            android:background="@color/color_b8b8b8" />

        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/color_38bcff"
            android:textSize="39px"
            android:textStyle="bold" />


    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoRelativeLayout>