<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/color_transparent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/waypoint_center_hint_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/single_click_map_set_point"
        android:textColor="@color/color_ffffff"
        android:textSize="30px" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navigation_point_set"
                android:textColor="@color/color_ffffff"
                android:textSize="30px" />

            <TextView
                android:id="@+id/waypoint_points_value_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/color_00cf00"
                android:textSize="50px"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pcs"
                android:textColor="@color/color_ffffff"
                android:textSize="30px" />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_distance"
                android:textColor="@color/color_ffffff"
                android:textSize="30px" />

            <TextView
                android:id="@+id/wappoint_total_distance_value_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/color_00cf00"
                android:textSize="50px"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:textColor="@color/color_ffffff"
                android:textSize="30px" />
        </com.zhy.autolayout.AutoLinearLayout>

    </com.zhy.autolayout.AutoLinearLayout>

    <SeekBar
        android:id="@+id/wappoint_seekbar"
        style="@style/DialogSpeedSeekbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9px"
        android:paddingTop="10px"
        android:paddingBottom="15px"
        android:progress="50" />/>
</com.zhy.autolayout.AutoLinearLayout>
